Revision history for Scene-Graph

0.02
    - Add MooseX::Storage roles
    - Make the Node a Forest::Tree (and document methods)
    - Add find method to Node
    - Add clear_children
    - Add Geometry::AffineTransform dep
    - Use does to determine if a node is translatable
    - Clean up some useless includes

0.01    Date/time
        First version, released on an unsuspecting world.
